[tool.poetry]
name = "weight_tracker"
version = "0.1.0"
description = ""
authors = ["Chris Northwood <chrisn@chrisn.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.2"
requests-oauthlib = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
