[tool.poetry]
name = "weight_tracker"
version = "0.1.0"
description = ""
authors = ["Chris Northwood <chrisn@chrisn.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.5"
requests-oauthlib = "^2.0.0"
gspread = "^6.2.1"
flask = "^3.1.2"
gunicorn = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
